# pyheatcontrol

./: .gitignore  README.md  TEST_PUSH.txt  cli.py  io_utils.py  optimization.py  pyproject.toml  requirements.txt  solver.py
scripts/: benchmark_optimization.py  main.py  profile_bottlenecks.py  test_suite.py
solver/: __init__.py  forward.py  gradient.py
src/pyheatcontrol/: cli.py  constants.py  gradcheck.py  io_utils.py  logging_config.py  mesh_utils.py  optimization.py  parsing_utils.py
src/pyheatcontrol/solver/: adjoint.py  forward.py  gradient.py  solver.py
test_reports/: test_report.md
tools/: check_imports.py
